--- a/issue/ISS-236.md
+++ b/issue/ISS-236.md
@@ -54,5 +54,5 @@ The best way to manage these pre-release toolchains is using the swiftenv tool.<
 
 Id|Name
 ------|------------
-10102|[Bildschirmfoto 2016-08-04 um 22.35.19.png](attachment/10102/Bildschirmfoto 2016-08-04 um 22.35.19.png)
+10102|[Bildschirmfoto 2016-08-04 um 22.35.19.png](../attachment/10102/Bildschirmfoto 2016-08-04 um 22.35.19.png)
 
