--- a/issue/ISS-301.md
+++ b/issue/ISS-301.md
@@ -53,5 +53,5 @@ Resolved|
 
 Id|Name
 ------|------------
-10207|[MCPushServiceTest.swift](attachment/10207/MCPushServiceTest.swift)
+10207|[MCPushServiceTest.swift](../attachment/10207/MCPushServiceTest.swift)
 
