--- a/issue/ISS-304.md
+++ b/issue/ISS-304.md
@@ -151,11 +151,11 @@ Rey</p></p>
 
 Id|Name
 ------|------------
-10208|[Screen Shot 2016-10-25 at 10.12.41 AM.png](attachment/10208/Screen Shot 2016-10-25 at 10.12.41 AM.png)
-10209|[Screen Shot 2016-10-25 at 10.13.37 AM.png](attachment/10209/Screen Shot 2016-10-25 at 10.13.37 AM.png)
-10210|[Screen Shot 2016-10-26 at 2.30.51 PM.png](attachment/10210/Screen Shot 2016-10-26 at 2.30.51 PM.png)
-10211|[Screen Shot 2016-10-26 at 2.34.36 PM.png](attachment/10211/Screen Shot 2016-10-26 at 2.34.36 PM.png)
-10212|[Screen Shot 2016-10-26 at 2.49.18 PM.png](attachment/10212/Screen Shot 2016-10-26 at 2.49.18 PM.png)
-10213|[Screen Shot 2016-10-26 at 2.52.12 PM.png](attachment/10213/Screen Shot 2016-10-26 at 2.52.12 PM.png)
-10214|[Screen Shot 2016-10-26 at 3.01.22 PM.png](attachment/10214/Screen Shot 2016-10-26 at 3.01.22 PM.png)
+10208|[Screen Shot 2016-10-25 at 10.12.41 AM.png](../attachment/10208/Screen Shot 2016-10-25 at 10.12.41 AM.png)
+10209|[Screen Shot 2016-10-25 at 10.13.37 AM.png](../attachment/10209/Screen Shot 2016-10-25 at 10.13.37 AM.png)
+10210|[Screen Shot 2016-10-26 at 2.30.51 PM.png](../attachment/10210/Screen Shot 2016-10-26 at 2.30.51 PM.png)
+10211|[Screen Shot 2016-10-26 at 2.34.36 PM.png](../attachment/10211/Screen Shot 2016-10-26 at 2.34.36 PM.png)
+10212|[Screen Shot 2016-10-26 at 2.49.18 PM.png](../attachment/10212/Screen Shot 2016-10-26 at 2.49.18 PM.png)
+10213|[Screen Shot 2016-10-26 at 2.52.12 PM.png](../attachment/10213/Screen Shot 2016-10-26 at 2.52.12 PM.png)
+10214|[Screen Shot 2016-10-26 at 3.01.22 PM.png](../attachment/10214/Screen Shot 2016-10-26 at 3.01.22 PM.png)
 
