--- a/issue/ISS-314.md
+++ b/issue/ISS-314.md
@@ -754,16 +754,16 @@ Thanks so much.</p></p>
 
 Id|Name
 ------|------------
-10218|[CURLLeak.zip](attachment/10218/CURLLeak.zip)
-10225|[Hello__world__and_PerfectTemplate_xcodeproj_and_CURLLeak_and_swiftroom.png](attachment/10225/Hello__world__and_PerfectTemplate_xcodeproj_and_CURLLeak_and_swiftroom.png)
-10221|[Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png](attachment/10221/Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png)
-10220|[Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png](attachment/10220/Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png)
-10222|[Instruments4_and_Hello__world__and_main_swift_and_CURLLeak.png](attachment/10222/Instruments4_and_Hello__world__and_main_swift_and_CURLLeak.png)
-10308|[Memory leaks 01.png](attachment/10308/Memory leaks 01.png)
-10307|[Memory leaks 02.png](attachment/10307/Memory leaks 02.png)
-10310|[Memory leaks 03.png](attachment/10310/Memory leaks 03.png)
-10309|[Memory leaks 04.png](attachment/10309/Memory leaks 04.png)
-10223|[PerfectTemplate_xcodeproj_and_Hello__world__and_CURLLeak.png](attachment/10223/PerfectTemplate_xcodeproj_and_Hello__world__and_CURLLeak.png)
-10219|[Screen Shot 2016-11-01 at 4.24.04 PM.png](attachment/10219/Screen Shot 2016-11-01 at 4.24.04 PM.png)
-10226|[Screen Shot 2016-11-02 at 3.28.39 PM.png](attachment/10226/Screen Shot 2016-11-02 at 3.28.39 PM.png)
+10218|[CURLLeak.zip](../attachment/10218/CURLLeak.zip)
+10225|[Hello__world__and_PerfectTemplate_xcodeproj_and_CURLLeak_and_swiftroom.png](../attachment/10225/Hello__world__and_PerfectTemplate_xcodeproj_and_CURLLeak_and_swiftroom.png)
+10221|[Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png](../attachment/10221/Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png)
+10220|[Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png](../attachment/10220/Instruments2_and_Hello__world__and_cURL_swift_and_HipChat.png)
+10222|[Instruments4_and_Hello__world__and_main_swift_and_CURLLeak.png](../attachment/10222/Instruments4_and_Hello__world__and_main_swift_and_CURLLeak.png)
+10308|[Memory leaks 01.png](../attachment/10308/Memory leaks 01.png)
+10307|[Memory leaks 02.png](../attachment/10307/Memory leaks 02.png)
+10310|[Memory leaks 03.png](../attachment/10310/Memory leaks 03.png)
+10309|[Memory leaks 04.png](../attachment/10309/Memory leaks 04.png)
+10223|[PerfectTemplate_xcodeproj_and_Hello__world__and_CURLLeak.png](../attachment/10223/PerfectTemplate_xcodeproj_and_Hello__world__and_CURLLeak.png)
+10219|[Screen Shot 2016-11-01 at 4.24.04 PM.png](../attachment/10219/Screen Shot 2016-11-01 at 4.24.04 PM.png)
+10226|[Screen Shot 2016-11-02 at 3.28.39 PM.png](../attachment/10226/Screen Shot 2016-11-02 at 3.28.39 PM.png)
 
