--- a/issue/ISS-315.md
+++ b/issue/ISS-315.md
@@ -62,5 +62,5 @@ Resolved|Tue, 8 Nov 2016 09:26:05 -0500
 
 Id|Name
 ------|------------
-10227|[Memory Leak of PerfectTemplate.png](attachment/10227/Memory Leak of PerfectTemplate.png)
+10227|[Memory Leak of PerfectTemplate.png](../attachment/10227/Memory Leak of PerfectTemplate.png)
 
