--- a/issue/ISS-324.md
+++ b/issue/ISS-324.md
@@ -100,5 +100,5 @@ fatal: unable to access 'https://github.com/PerfectlySoft/Perfect-MongoDB.git/':
 
 Id|Name
 ------|------------
-10228|[ISS-324-patch.diff](attachment/10228/ISS-324-patch.diff)
+10228|[ISS-324-patch.diff](../attachment/10228/ISS-324-patch.diff)
 
