--- a/issue/ISS-331.md
+++ b/issue/ISS-331.md
@@ -104,6 +104,6 @@ Could you retest (clean, build) and re-open if still an issue?</p>
 
 Id|Name
 ------|------------
-10246|[main.swift](attachment/10246/main.swift)
-10240|[main.swift](attachment/10240/main.swift)
+10246|[main.swift](../attachment/10246/main.swift)
+10240|[main.swift](../attachment/10240/main.swift)
 
