--- a/issue/ISS-340.md
+++ b/issue/ISS-340.md
@@ -67,6 +67,6 @@ Firstly, please make sure there is a special pc file in somewhere of your comput
 
 Id|Name
 ------|------------
-10251|[Screen Shot 2016-12-08 at 6.01.00 PM.png](attachment/10251/Screen Shot 2016-12-08 at 6.01.00 PM.png)
-10250|[Screen Shot 2016-12-08 at 6.01.11 PM.png](attachment/10250/Screen Shot 2016-12-08 at 6.01.11 PM.png)
+10251|[Screen Shot 2016-12-08 at 6.01.00 PM.png](../attachment/10251/Screen Shot 2016-12-08 at 6.01.00 PM.png)
+10250|[Screen Shot 2016-12-08 at 6.01.11 PM.png](../attachment/10250/Screen Shot 2016-12-08 at 6.01.11 PM.png)
 
