--- a/issue/ISS-345.md
+++ b/issue/ISS-345.md
@@ -31,5 +31,5 @@ Resolved|Fri, 16 Dec 2016 09:29:26 -0500
 
 Id|Name
 ------|------------
-10252|[PACrash.rtf](attachment/10252/PACrash.rtf)
+10252|[PACrash.rtf](../attachment/10252/PACrash.rtf)
 
