--- a/issue/ISS-355.md
+++ b/issue/ISS-355.md
@@ -99,5 +99,5 @@ I haven't modified the Package.swift, and it looks like this:</p>
 
 Id|Name
 ------|------------
-10258|[perfectCURL_error](attachment/10258/perfectCURL_error)
+10258|[perfectCURL_error](../attachment/10258/perfectCURL_error)
 
