--- a/issue/ISS-359.md
+++ b/issue/ISS-359.md
@@ -77,5 +77,5 @@ Good luck!</p>
 
 Id|Name
 ------|------------
-10259|[2017-1-2-20-24-9-5.png](attachment/10259/2017-1-2-20-24-9-5.png)
+10259|[2017-1-2-20-24-9-5.png](../attachment/10259/2017-1-2-20-24-9-5.png)
 
