--- a/issue/ISS-414.md
+++ b/issue/ISS-414.md
@@ -47,8 +47,8 @@ Then I type into "https://localhost:8080/" is success, but entering "http://loca
 
 Id|Name
 ------|------------
-10302|[屏幕快照 2017-02-24 下午12.30.35.png](attachment/10302/屏幕快照 2017-02-24 下午12.30.35.png)
-10303|[屏幕快照 2017-02-24 下午12.38.54.png](attachment/10303/屏幕快照 2017-02-24 下午12.38.54.png)
-10304|[屏幕快照 2017-02-24 下午12.40.50.png](attachment/10304/屏幕快照 2017-02-24 下午12.40.50.png)
-10305|[屏幕快照 2017-02-24 下午12.41.12.png](attachment/10305/屏幕快照 2017-02-24 下午12.41.12.png)
+10302|[屏幕快照 2017-02-24 下午12.30.35.png](../attachment/10302/屏幕快照 2017-02-24 下午12.30.35.png)
+10303|[屏幕快照 2017-02-24 下午12.38.54.png](../attachment/10303/屏幕快照 2017-02-24 下午12.38.54.png)
+10304|[屏幕快照 2017-02-24 下午12.40.50.png](../attachment/10304/屏幕快照 2017-02-24 下午12.40.50.png)
+10305|[屏幕快照 2017-02-24 下午12.41.12.png](../attachment/10305/屏幕快照 2017-02-24 下午12.41.12.png)
 
