--- a/issue/ISS-418.md
+++ b/issue/ISS-418.md
@@ -38,5 +38,5 @@ Resolved|
 
 Id|Name
 ------|------------
-10306|[sessions.png](attachment/10306/sessions.png)
+10306|[sessions.png](../attachment/10306/sessions.png)
 
