--- a/issue/ISS-429.md
+++ b/issue/ISS-429.md
@@ -98,8 +98,8 @@ swift build<br/>
 
 Id|Name
 ------|------------
-10315|[image.png](attachment/10315/image.png)
-10314|[image.png](attachment/10314/image.png)
-10313|[image.png](attachment/10313/image.png)
-10312|[image.png](attachment/10312/image.png)
+10315|[image.png](../attachment/10315/image.png)
+10314|[image.png](../attachment/10314/image.png)
+10313|[image.png](../attachment/10313/image.png)
+10312|[image.png](../attachment/10312/image.png)
 
