--- a/issue/ISS-431.md
+++ b/issue/ISS-431.md
@@ -46,5 +46,5 @@ Resolved|Tue, 21 Mar 2017 12:45:09 -0400
 
 Id|Name
 ------|------------
-10316|[706F9FD8-5584-4886-81C6-DE4CD2CF2F1C.png](attachment/10316/706F9FD8-5584-4886-81C6-DE4CD2CF2F1C.png)
+10316|[706F9FD8-5584-4886-81C6-DE4CD2CF2F1C.png](../attachment/10316/706F9FD8-5584-4886-81C6-DE4CD2CF2F1C.png)
 
