--- a/issue/ISS-432.md
+++ b/issue/ISS-432.md
@@ -44,5 +44,5 @@ Resolved|
 
 Id|Name
 ------|------------
-10317|[Perfect_Assistant_and_Issue_Navigator_-_PerfectlySoft_JIRA.png](attachment/10317/Perfect_Assistant_and_Issue_Navigator_-_PerfectlySoft_JIRA.png)
+10317|[Perfect_Assistant_and_Issue_Navigator_-_PerfectlySoft_JIRA.png](../attachment/10317/Perfect_Assistant_and_Issue_Navigator_-_PerfectlySoft_JIRA.png)
 
