--- a/issue/ISS-437.md
+++ b/issue/ISS-437.md
@@ -32,5 +32,5 @@ Resolved|
 
 Id|Name
 ------|------------
-10319|[Tokens_swift.png](attachment/10319/Tokens_swift.png)
+10319|[Tokens_swift.png](../attachment/10319/Tokens_swift.png)
 
