--- a/issue/ISS-438.md
+++ b/issue/ISS-438.md
@@ -31,5 +31,5 @@ Resolved|
 
 Id|Name
 ------|------------
-10320|[StORM_swift.png](attachment/10320/StORM_swift.png)
+10320|[StORM_swift.png](../attachment/10320/StORM_swift.png)
 
