--- a/issue/ISS-447.md
+++ b/issue/ISS-447.md
@@ -66,5 +66,5 @@ Binaries in release mode</p>
 
 Id|Name
 ------|------------
-10321|[PerfectEngine.zip](attachment/10321/PerfectEngine.zip)
+10321|[PerfectEngine.zip](../attachment/10321/PerfectEngine.zip)
 
