--- a/issue/ISS-454.md
+++ b/issue/ISS-454.md
@@ -104,11 +104,11 @@ Resolved|Thu, 4 May 2017 10:58:27 -0400
 
 Id|Name
 ------|------------
-10322|[api_en.md](attachment/10322/api_en.md)
-10324|[Correct.png](attachment/10324/Correct.png)
-10323|[Error.png](attachment/10323/Error.png)
-10326|[Parse_Correct.png](attachment/10326/Parse_Correct.png)
-10325|[Parse_Error.png](attachment/10325/Parse_Error.png)
-10327|[Perfect-Markdown-Demo.zip](attachment/10327/Perfect-Markdown-Demo.zip)
-10328|[Screen Shot 2017-05-02 at 9.30.35 AM.png](attachment/10328/Screen Shot 2017-05-02 at 9.30.35 AM.png)
+10322|[api_en.md](../attachment/10322/api_en.md)
+10324|[Correct.png](../attachment/10324/Correct.png)
+10323|[Error.png](../attachment/10323/Error.png)
+10326|[Parse_Correct.png](../attachment/10326/Parse_Correct.png)
+10325|[Parse_Error.png](../attachment/10325/Parse_Error.png)
+10327|[Perfect-Markdown-Demo.zip](../attachment/10327/Perfect-Markdown-Demo.zip)
+10328|[Screen Shot 2017-05-02 at 9.30.35 AM.png](../attachment/10328/Screen Shot 2017-05-02 at 9.30.35 AM.png)
 
