--- a/issue/ISS-463.md
+++ b/issue/ISS-463.md
@@ -58,5 +58,5 @@ Resolved|
 
 Id|Name
 ------|------------
-10332|[PerfectTemplate.zip](attachment/10332/PerfectTemplate.zip)
+10332|[PerfectTemplate.zip](../attachment/10332/PerfectTemplate.zip)
 
