--- a/issue/ISS-491.md
+++ b/issue/ISS-491.md
@@ -109,6 +109,6 @@ Resolved|Mon, 17 Jul 2017 09:42:28 -0400
 
 Id|Name
 ------|------------
-10403|[main.swift](attachment/10403/main.swift)
-10402|[UserController.swift](attachment/10402/UserController.swift)
+10403|[main.swift](../attachment/10403/main.swift)
+10402|[UserController.swift](../attachment/10402/UserController.swift)
 
