--- a/issue/ISS-499.md
+++ b/issue/ISS-499.md
@@ -154,5 +154,5 @@ Resolved|Wed, 2 Aug 2017 09:46:44 -0400
 
 Id|Name
 ------|------------
-10405|[Archive.zip](attachment/10405/Archive.zip)
+10405|[Archive.zip](../attachment/10405/Archive.zip)
 
