--- a/issue/ISS-504.md
+++ b/issue/ISS-504.md
@@ -58,6 +58,6 @@ Resolved|Mon, 22 Jan 2018 12:14:09 -0500
 
 Id|Name
 ------|------------
-10411|[image.png](attachment/10411/image.png)
-10410|[image.png](attachment/10410/image.png)
+10411|[image.png](../attachment/10411/image.png)
+10410|[image.png](../attachment/10410/image.png)
 
