--- a/issue/ISS-512.md
+++ b/issue/ISS-512.md
@@ -38,6 +38,6 @@ Resolved|
 
 Id|Name
 ------|------------
-10501|[Screen Shot 2017-08-11 at 16.20.31.png](attachment/10501/Screen Shot 2017-08-11 at 16.20.31.png)
-10500|[Screen Shot 2017-08-11 at 16.21.01.png](attachment/10500/Screen Shot 2017-08-11 at 16.21.01.png)
+10501|[Screen Shot 2017-08-11 at 16.20.31.png](../attachment/10501/Screen Shot 2017-08-11 at 16.20.31.png)
+10500|[Screen Shot 2017-08-11 at 16.21.01.png](../attachment/10500/Screen Shot 2017-08-11 at 16.21.01.png)
 
