--- a/issue/ISS-524.md
+++ b/issue/ISS-524.md
@@ -58,6 +58,6 @@ Resolved|Thu, 18 Jan 2018 14:58:11 -0500
 
 Id|Name
 ------|------------
-10504|[mysql1.png](attachment/10504/mysql1.png)
-10503|[mysql2.png](attachment/10503/mysql2.png)
+10504|[mysql1.png](../attachment/10504/mysql1.png)
+10503|[mysql2.png](../attachment/10503/mysql2.png)
 
