--- a/issue/ISS-564.md
+++ b/issue/ISS-564.md
@@ -66,6 +66,6 @@ Now I again can see messages in the `tasks` window.</p>
 
 Id|Name
 ------|------------
-10603|[build local.png](attachment/10603/build local.png)
-10602|[empty 'tasks' window.png](attachment/10602/empty 'tasks' window.png)
+10603|[build local.png](../attachment/10603/build local.png)
+10602|[empty 'tasks' window.png](../attachment/10602/empty 'tasks' window.png)
 
