--- a/issue/ISS-567.md
+++ b/issue/ISS-567.md
@@ -67,5 +67,5 @@ a request is the data from the browser, and the response is the data transferrin
 
 Id|Name
 ------|------------
-10604|[屏幕快照 2017-12-11 上午9.12.13.png](attachment/10604/屏幕快照 2017-12-11 上午9.12.13.png)
+10604|[屏幕快照 2017-12-11 上午9.12.13.png](../attachment/10604/屏幕快照 2017-12-11 上午9.12.13.png)
 
