--- a/issue/ISS-381.md
+++ b/issue/ISS-381.md
@@ -88,5 +88,5 @@ Resolved|Mon, 5 Feb 2018 15:44:13 -0500
 
 Id|Name
 ------|------------
-10261|[MongoDB.png](attachment/10261/MongoDB.png)
+10261|[MongoDB.png](../attachment/10261/MongoDB.png)
 
