--- a/issue/ISS-402.md
+++ b/issue/ISS-402.md
@@ -58,5 +58,5 @@ sorry about my poor English, in Chinese:<br/>
 
 Id|Name
 ------|------------
-10301|[屏幕快照 2017-02-09 下午3.12.42.jpg](attachment/10301/屏幕快照 2017-02-09 下午3.12.42.jpg)
+10301|[屏幕快照 2017-02-09 下午3.12.42.jpg](../attachment/10301/屏幕快照 2017-02-09 下午3.12.42.jpg)
 
