--- a/issue/ISS-433.md
+++ b/issue/ISS-433.md
@@ -78,5 +78,5 @@ Thanks</p></p>
 
 Id|Name
 ------|------------
-10318|[compress-file-demo.zip](attachment/10318/compress-file-demo.zip)
+10318|[compress-file-demo.zip](../attachment/10318/compress-file-demo.zip)
 
