Fixing broken urls.

--- a/issue/ISS-235.md
+++ b/issue/ISS-235.md
@@ -144,5 +144,5 @@ If you join us on the Gitter channel you will be able to see when we push out th
 
 Id|Name
 ------|------------
-10101|[Screenshot 2016-08-04 18.11.39.png](../attachment/10101/Screenshot 2016-08-04 18.11.39.png)
+10101|[Screenshot 2016-08-04 18.11.39.png](../attachment/10101/Screenshot+2016-08-04+18.11.39.png)
 
