--- a/issue/ISS-252.md
+++ b/issue/ISS-252.md
@@ -123,6 +123,6 @@ brew link openssl --force</p>
 
 Id|Name
 ------|------------
-10201|[Screen Shot 2016-08-23 at 09.27.36.png](../attachment/10201/Screen Shot 2016-08-23 at 09.27.36.png)
-10200|[Screen Shot 2016-08-23 at 09.27.56.png](../attachment/10200/Screen Shot 2016-08-23 at 09.27.56.png)
+10201|[Screen Shot 2016-08-23 at 09.27.36.png](../attachment/10201/Screen+Shot+2016-08-23+at+09.27.36.png)
+10200|[Screen Shot 2016-08-23 at 09.27.56.png](../attachment/10200/Screen+Shot+2016-08-23+at+09.27.56.png)
 
