--- a/issue/ISS-288.md
+++ b/issue/ISS-288.md
@@ -109,9 +109,9 @@ I will get back you by tomorrow.</p>
 
 Id|Name
 ------|------------
-10202|[Screen Shot 2016-10-11 at 2.26.00 PM.png](../attachment/10202/Screen Shot 2016-10-11 at 2.26.00 PM.png)
-10203|[Screen Shot 2016-10-11 at 2.26.57 PM.png](../attachment/10203/Screen Shot 2016-10-11 at 2.26.57 PM.png)
-10204|[Screen Shot 2016-10-11 at 2.27.19 PM.png](../attachment/10204/Screen Shot 2016-10-11 at 2.27.19 PM.png)
-10205|[Screen Shot 2016-10-11 at 2.35.21 PM.png](../attachment/10205/Screen Shot 2016-10-11 at 2.35.21 PM.png)
-10206|[Screen Shot 2016-10-13 at 12.13.20 AM.png](../attachment/10206/Screen Shot 2016-10-13 at 12.13.20 AM.png)
+10202|[Screen Shot 2016-10-11 at 2.26.00 PM.png](../attachment/10202/Screen+Shot+2016-10-11+at+2.26.00+PM.png)
+10203|[Screen Shot 2016-10-11 at 2.26.57 PM.png](../attachment/10203/Screen+Shot+2016-10-11+at+2.26.57+PM.png)
+10204|[Screen Shot 2016-10-11 at 2.27.19 PM.png](../attachment/10204/Screen+Shot+2016-10-11+at+2.27.19+PM.png)
+10205|[Screen Shot 2016-10-11 at 2.35.21 PM.png](../attachment/10205/Screen+Shot+2016-10-11+at+2.35.21+PM.png)
+10206|[Screen Shot 2016-10-13 at 12.13.20 AM.png](../attachment/10206/Screen+Shot+2016-10-13+at+12.13.20+AM.png)
 
