--- a/issue/ISS-308.md
+++ b/issue/ISS-308.md
@@ -1842,8 +1842,8 @@ In this case, we have spent so many times to fix this issue.</p>
 
 Id|Name
 ------|------------
-10216|[Screen Shot 2016-11-01 at 10.59.27 AM.png](../attachment/10216/Screen Shot 2016-11-01 at 10.59.27 AM.png)
-10215|[Screen Shot 2016-11-01 at 11.00.53 AM.png](../attachment/10215/Screen Shot 2016-11-01 at 11.00.53 AM.png)
-10217|[Screen Shot 2016-11-01 at 11.00.56 AM.png](../attachment/10217/Screen Shot 2016-11-01 at 11.00.56 AM.png)
-10224|[Screen Shot 2016-11-02 at 9.19.54 AM.png](../attachment/10224/Screen Shot 2016-11-02 at 9.19.54 AM.png)
+10216|[Screen Shot 2016-11-01 at 10.59.27 AM.png](../attachment/10216/Screen+Shot+2016-11-01+at+10.59.27+AM.png)
+10215|[Screen Shot 2016-11-01 at 11.00.53 AM.png](../attachment/10215/Screen+Shot+2016-11-01+at+11.00.53+AM.png)
+10217|[Screen Shot 2016-11-01 at 11.00.56 AM.png](../attachment/10217/Screen+Shot+2016-11-01+at+11.00.56+AM.png)
+10224|[Screen Shot 2016-11-02 at 9.19.54 AM.png](../attachment/10224/Screen+Shot+2016-11-02+at+9.19.54+AM.png)
 
