--- a/issue/ISS-351.md
+++ b/issue/ISS-351.md
@@ -121,8 +121,8 @@ let spec = self.bodySpecs.last!</p>
 Id|Name
 ------|------------
 10257|[1.gif](../attachment/10257/1.gif)
-10253|[屏幕快照 2016-12-22 11.15.52.png](../attachment/10253/屏幕快照 2016-12-22 11.15.52.png)
-10255|[屏幕快照 2016-12-22 11.16.29.png](../attachment/10255/屏幕快照 2016-12-22 11.16.29.png)
-10254|[屏幕快照 2016-12-22 11.17.21.png](../attachment/10254/屏幕快照 2016-12-22 11.17.21.png)
-10256|[屏幕快照 2016-12-22 11.18.50.png](../attachment/10256/屏幕快照 2016-12-22 11.18.50.png)
+10253|[屏幕快照 2016-12-22 11.15.52.png](../attachment/10253/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7+2016-12-22+11.15.52.png)
+10255|[屏幕快照 2016-12-22 11.16.29.png](../attachment/10255/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7+2016-12-22+11.16.29.png)
+10254|[屏幕快照 2016-12-22 11.17.21.png](../attachment/10254/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7+2016-12-22+11.17.21.png)
+10256|[屏幕快照 2016-12-22 11.18.50.png](../attachment/10256/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7+2016-12-22+11.18.50.png)
 
