--- a/issue/ISS-399.md
+++ b/issue/ISS-399.md
@@ -85,5 +85,5 @@ let INADDR_NONE = UInt32(0xffffffff)<br/>
 
 Id|Name
 ------|------------
-10300|[Captura de pantalla 2017-02-05 a las 2.48.48.png](../attachment/10300/Captura de pantalla 2017-02-05 a las 2.48.48.png)
+10300|[Captura de pantalla 2017-02-05 a las 2.48.48.png](../attachment/10300/Captura+de+pantalla+2017-02-05+a+las+2.48.48.png)
 
