--- a/issue/ISS-402.md
+++ b/issue/ISS-402.md
@@ -58,5 +58,5 @@ sorry about my poor English, in Chinese:<br/>
 
 Id|Name
 ------|------------
-10301|[屏幕快照 2017-02-09 下午3.12.42.jpg](../attachment/10301/屏幕快照 2017-02-09 下午3.12.42.jpg)
+10301|[屏幕快照 2017-02-09 下午3.12.42.jpg](../attachment/10301/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7+2017-02-09+%E4%B8%8B%E5%8D%883.12.42.jpg)
 
