--- a/issue/ISS-454.md
+++ b/issue/ISS-454.md
@@ -110,5 +110,5 @@ Id|Name
 10326|[Parse_Correct.png](../attachment/10326/Parse_Correct.png)
 10325|[Parse_Error.png](../attachment/10325/Parse_Error.png)
 10327|[Perfect-Markdown-Demo.zip](../attachment/10327/Perfect-Markdown-Demo.zip)
-10328|[Screen Shot 2017-05-02 at 9.30.35 AM.png](../attachment/10328/Screen Shot 2017-05-02 at 9.30.35 AM.png)
+10328|[Screen Shot 2017-05-02 at 9.30.35 AM.png](../attachment/10328/Screen+Shot+2017-05-02+at+9.30.35+AM.png)
 
