--- a/issue/ISS-470.md
+++ b/issue/ISS-470.md
@@ -50,5 +50,5 @@ Resolved|Fri, 19 Jan 2018 15:41:26 -0500
 
 Id|Name
 ------|------------
-10333|[Screen Shot 2017-05-22 at 3.00.58 PM.png](../attachment/10333/Screen Shot 2017-05-22 at 3.00.58 PM.png)
+10333|[Screen Shot 2017-05-22 at 3.00.58 PM.png](../attachment/10333/Screen+Shot+2017-05-22+at+3.00.58+PM.png)
 
