--- a/issue/ISS-490.md
+++ b/issue/ISS-490.md
@@ -80,5 +80,5 @@ perfectlysoft/perfectassistant   3.0                 8ec0a4c8f93f        5 month
 
 Id|Name
 ------|------------
-10400|[Project output.png](../attachment/10400/Project output.png)
+10400|[Project output.png](../attachment/10400/Project+output.png)
 
