--- a/issue/ISS-493.md
+++ b/issue/ISS-493.md
@@ -66,5 +66,5 @@ Resolved|Sat, 8 Jul 2017 18:29:21 -0400
 
 Id|Name
 ------|------------
-10401|[Screen Shot 2017-07-08 at 4.18.29 PM.png](../attachment/10401/Screen Shot 2017-07-08 at 4.18.29 PM.png)
+10401|[Screen Shot 2017-07-08 at 4.18.29 PM.png](../attachment/10401/Screen+Shot+2017-07-08+at+4.18.29+PM.png)
 
