--- a/issue/ISS-496.md
+++ b/issue/ISS-496.md
@@ -68,5 +68,5 @@ Resolved|Wed, 19 Jul 2017 10:13:02 -0400
 
 Id|Name
 ------|------------
-10404|[Screen Shot 2017-07-12 at 20.39.31.png](../attachment/10404/Screen Shot 2017-07-12 at 20.39.31.png)
+10404|[Screen Shot 2017-07-12 at 20.39.31.png](../attachment/10404/Screen+Shot+2017-07-12+at+20.39.31.png)
 
