--- a/issue/ISS-551.md
+++ b/issue/ISS-551.md
@@ -93,6 +93,6 @@ Resolved|Tue, 30 Jan 2018 11:07:45 -0500
 
 Id|Name
 ------|------------
-10600|[Screen Shot 2017-10-28 at 7.11.46 PM.png](../attachment/10600/Screen Shot 2017-10-28 at 7.11.46 PM.png)
-10601|[Screen Shot 2017-10-28 at 7.12.27 PM.png](../attachment/10601/Screen Shot 2017-10-28 at 7.12.27 PM.png)
+10600|[Screen Shot 2017-10-28 at 7.11.46 PM.png](../attachment/10600/Screen+Shot+2017-10-28+at+7.11.46+PM.png)
+10601|[Screen Shot 2017-10-28 at 7.12.27 PM.png](../attachment/10601/Screen+Shot+2017-10-28+at+7.12.27+PM.png)
 
