--- a/issue/ISS-460.md
+++ b/issue/ISS-460.md
@@ -51,7 +51,7 @@ Resolved|
 
 Id|Name
 ------|------------
-10329|[Screen Shot 2017-05-03 at 11.20.17 AM.png](../attachment/10329/Screen Shot 2017-05-03 at 11.20.17 AM.png)
-10330|[Screen Shot 2017-05-03 at 11.20.34 AM.png](../attachment/10330/Screen Shot 2017-05-03 at 11.20.34 AM.png)
-10331|[Screen Shot 2017-05-03 at 11.20.48 AM.png](../attachment/10331/Screen Shot 2017-05-03 at 11.20.48 AM.png)
+10329|[Screen Shot 2017-05-03 at 11.20.17 AM.png](../attachment/10329/Screen+Shot+2017-05-03+at+11.20.17+AM.png)
+10330|[Screen Shot 2017-05-03 at 11.20.34 AM.png](../attachment/10330/Screen+Shot+2017-05-03+at+11.20.34+AM.png)
+10331|[Screen Shot 2017-05-03 at 11.20.48 AM.png](../attachment/10331/Screen+Shot+2017-05-03+at+11.20.48+AM.png)
 
