--- a/issue/ISS-515.md
+++ b/issue/ISS-515.md
@@ -76,5 +76,5 @@ Resolved|
 
 Id|Name
 ------|------------
-10502|[Screen Shot 2017-08-16 at 11.42.56 PM.png](../attachment/10502/Screen Shot 2017-08-16 at 11.42.56 PM.png)
+10502|[Screen Shot 2017-08-16 at 11.42.56 PM.png](../attachment/10502/Screen+Shot+2017-08-16+at+11.42.56+PM.png)
 
